# pySigma-backend-netwitness

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  print_coverage.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
sigma/backends/netwitness/: __init__.py  netwitness.py
sigma/pipelines/netwitness/: __init__.py  netwitness.py  windows.py
tests/: conftest.py  test_backend_netwitness.py  test_pipelines_netwitness.py
