[tool.poetry]
name = "pySigma-backend-netwitness"
version = "0.1.2"
description = "pySigma NetWitness backend"
readme = "README.md"
authors = ["Marcel Kwaschny <dev@marcelkwaschny.de>"]
license = "LGPL-2.1-only"
repository = "https://github.com/marcelkwaschny/pySigma-backend-netwitness"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"
pylint = "^3.2.5"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pyproject-flake8 = "^7.0.0"
ruff = "^0.5.2"
defusedxml = "^0.7.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.pylint.'MASTER']
init-hook = "import sys; sys.path.append('.')"

[tool.pylint.'FORMAT']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
enable="all"
disable="too-few-public-methods,suppressed-message,locally-disabled,too-many-arguments,fixme,no-name-in-module"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120